add section opinie

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             </p>
         </div>
         <div class="navbar__list">
-            <a href="#section-1" class="navbar__list-link">Home</a>
-            <a href="#section-2" class="navbar__list-link">About</a>
-            <a href="#section-3" class="navbar__list-link">Pricing</a>
-            <a href="#section-4" class="navbar__list-link">Contact</a>
+            <a href="#" class="navbar__list-link">O nas</a>
+            <a href="#" class="navbar__list-link">Oferta</a>
+            <a href="#" class="navbar__list-link">Sklep</a>
+            <a href="#" class="navbar__list-link">Opinie</a>
+            <a href="#" class="navbar__list-link">Kontakt</a>
         </div>
     </nav>
 
@@ -82,7 +83,9 @@
 
         <!-- Section 2  -->
         <section class="section-2" id="section-2">
-            <h1 class="heading">About Us</h1>
+            <h1 class="heading">O NAS</h1>
+
+
             <p class="section-2__paragraph">
                 <i class="fas fa-quote-left"></i>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quisquam consequuntur, inventore,
@@ -94,158 +97,8 @@
 
         <!-- End of Section 2 -->
 
-        <!-- Section 3 -->
+        <!-- Accordion -->
 
-        <section class="section-3" id="section-3">
-            <h1 class="heading">Pricing</h1>
-            <div class="swiper mySwiper">
-                <div class="pricing-cards-wrapper swiper-wrapper">
-                    <div class="pricing-card swiper-slide">
-                        <div class="pricing-card-front">
-                            <h1 class="pricing-card-heading heading-free">FREE</h1>
-                            <h3 class="pricing-card-price">$0</h3>
-                            <ul class="pricing-card-list list-free">
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-times"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-times"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-times"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                            </ul>
-                            <button class="pricing-card-btn btn-free">Choose Plan</button>
-                        </div>
-                        <div class="pricing-card-back back-free">
-                            <a href="#">Order now</a>
-                        </div>
-                    </div>
-
-
-                    <div class="pricing-card swiper-slide">
-                        <div class="pricing-card-front">
-                            <h1 class="pricing-card-heading heading-basic">BASIC</h1>
-                            <h3 class="pricing-card-price">$199</h3>
-                            <ul class="pricing-card-list list-basic">
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-
-                                <li>
-                                    <i class="fas fa-times"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                            </ul>
-                            <button class="pricing-card-btn btn-basic">Choose Plan</button>
-                        </div>
-                        <div class="pricing-card-back back-basic">
-                            <a href="#">Order now</a>
-                        </div>
-                    </div>
-
-
-                    <div class="pricing-card swiper-slide">
-                        <div class="pricing-card-front">
-                            <h1 class="pricing-card-heading heading-standard">STANDARD</h1>
-                            <h3 class="pricing-card-price">$299</h3>
-                            <ul class="pricing-card-list list-standard">
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                            </ul>
-                            <button class="pricing-card-btn btn-standard">Choose Plan</button>
-                        </div>
-                        <div class="pricing-card-back back-standard">
-                            <a href="#">Order now</a>
-                        </div>
-                    </div>
-
-
-                    <div class="pricing-card swiper-slide">
-                        <div class="pricing-card-front">
-                            <h1 class="pricing-card-heading heading-premium">PREMIUM</h1>
-                            <h3 class="pricing-card-price">$499</h3>
-                            <ul class="pricing-card-list list-premium">
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Cartimesm</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-check"></i>
-                                    <span>Pricing Card Item</span>
-                                </li>
-                            </ul>
-                            <button class="pricing-card-btn btn-premium">Choose Plan</button>
-                        </div>
-                        <div class="pricing-card-back back-premium">
-                            <a href="#">Order now</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </section>
-
-        <!-- End of Section 3 -->
         <section class="section_accordion">
             <h1 class="heading">Oferujemy</h1>
             <div class="accordion-bcg"></div>
@@ -309,6 +162,109 @@
                 </div>
             </div>
         </section>
+
+
+<!-- Opinion-->
+
+<section class="opinion" id="opinion">
+    <h1 class="heading opinion-heading">Opinie naszych klientów</h1>
+    <div class="swiper mySwiper">
+        <div class="opinion-cards-wrapper swiper-wrapper">
+            <div class="opinion-card swiper-slide">
+                <div class="opinion-box">
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Bardzo uczynny człowiek i&nbsp;dobry fachowiec. Migiem załatwił lawetę i&nbsp;pomógł usunąć
+                        problem. Na dodatek zaoferował pomoc w&nbsp;dostarczeniu mnie i&nbsp;dziecka do domu. Zaliczyliśmy
+                        awarię auta w podróży i&nbsp;to w&nbsp;weekend i&nbsp;bez pomocy tego pana sytuacja byłaby naprawdę
+                        dramatyczna... Polecam tego mechanika.
+                        <i class="fas fa-quote-right"></i>
+                    </p>
+                    <p class="opinion-author">Marta Mucha</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/izyvYuvLPmZAojX26">Opinia z google</a>
+
+                </div>
+            </div>
+
+            <div class="opinion-card swiper-slide">
+                <div class="opinion-box">
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Mimo soboty i&nbsp;dość późnej godziny (już dawno po zamknięciu) nasze zepsute auto wróciło
+                        na trasę dzięki nieocenionej pomocy Pana Bernarda!! Świetny fachowiec lubiący to co robi, problem sprawnie rozwiązany. Polecamy bardzo bardzo!!!
+                        P.S. przepraszamy szanowną małżonkę za nieumilenie weekendu, ale wierzymy, że karma wraca i&nbsp;okazana życzliwość wróci do Was ze zdwojoną siłą ;)
+                        <i class="fas fa-quote-right"></i>
+                    </p>
+                    <p class="opinion-author">Magdalena Warian</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/8ju2SDuo54v3cJBE8">Opinia z google</a>
+
+
+                </div>
+            </div>
+
+            <div class="opinion-card swiper-slide">
+                <div class="opinion-box">
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Bardzo profesjonalna obsługa, 10 minut przed zamknięciem warsztatu rozwiązano usterkę
+                        związaną z&nbsp;czujnikiem ciśnień DPF, powrót ponad 500 km dzięki temu był bezpieczny i&nbsp;komfortowy, samochód działa bez zarzutów. Właściciel pasjonat, profesjonalista :D
+                        <i class="fas fa-quote-right"></i>
+                    </p>
+                    <p class="opinion-author">Magdalena Bieńka</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/Bd9ogqVoqXLPDmTf7">Opinia z google</a>
+
+                </div>
+            </div>
+
+            <div class="opinion-card swiper-slide">
+                <div class="opinion-box">
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Bardzo pomocny mechanik i&nbsp;najlepszy jakikolwiek był i&nbsp;uczciwy co ma zrobić zrobi nie
+                        oszuka, zapewni dojazd jeśli nie ma kto zabrać. Polecam
+                        <i class="fas fa-quote-right"></i>
+                    <p class="opinion-author">Leszek M</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/AfQyszZJ2CpH1eBL9">Opinia z google</a>
+
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Super, profesjonalna obsługa. Mojej żonie zepsuł się samochód na trasie i&nbsp;otrzymała mega
+                        wsparcie. Jestem bardzo wdzięczny.
+                        Polecam
+                        <i class="fas fa-quote-right"></i>
+                    </p>
+                    <p class="opinion-author">Andrzej Butra</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/JYbGr49ugiUzpPJG8">Opinia z google</a>
+
+                </div>
+            </div>
+
+            <div class="opinion-card swiper-slide">
+                <div class="opinion-box">
+                    <p class="opinion-paragraph">
+                        <i class="fas fa-quote-left"></i>
+                        Zepsuł nam się samochód w drodze na wakacje. Była to sobota. Pan Bernard przyjął nas zaraz po otwarciu i&nbsp;z&nbsp;całym zaangażowaniem jak najlepiej dla nas i&nbsp;bardzo szybko bo droga przed nami była jeszcze daleka naprawił co trzeba i&nbsp;dotarliśmy do celu naszej
+                        wyprawy. Także gorąco polecamy.
+                        <i class="fas fa-quote-right"></i>
+                    </p>
+                    <p class="opinion-author">Joanna Osiniak</p>
+                    <a class="opinion-link" href="https://goo.gl/maps/SnXNqmHAUKbM2kQu5">Opinia z google</a>
+
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
+<!-- End of Opinion -->
+
+
+
+<!-- Contact -->
 
         <section class="contactUs">
             <h1 class="heading">Skontaktuj się</h1>
@@ -434,28 +390,27 @@
 
         </section>
 
+        <!-- End of Contact -->
 
         <!-- Footer  -->
 
         <footer class="footer">
 
             <div class="footer__nav">
-                <a href="#section-1">Home</a>
-                <a href="#section-2">About Us</a>
-                <a href="#section-3">Pricing</a>
-                <a href="#section-4">Contact</a>
+                <a href="#">O NAS</a>
+                <a href="#">OFERTA</a>
+                <a href="#">SKLEP</a>
+                <a href="#">OPINIE</a>
+                <a href="#">KONTAKT</a>
             </div>
             <p class="footer__copyright">
-                Copyright &copy; CodeAndCreate All Rights Reserved
+                Copyright &copy; ZAPMAR Marek Zapała All Rights Reserved
             </p>
         </footer>
 
         <!-- End of Fooer -->
 
     </div>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
