fix button and shop module

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Keywords" content="części samochodowe, auto, części, części do samochodu, części do auta, sklep z częściami, auto sklep, sprzedaż części samochodowych, auto części, sklep motoryzacyjny, Przełom, Mniów, Kielce, Miedziana Góra, Końskie, auto naprawa, naprawa samochodów, serwis samochodowy, warsztat samochodowy, mechanik, dobry mechanik, dobre opinie, tani warsztat">
-    <meta name="Description" content="Naprawa samochodów i sklep motoryzacyjny z akcesoriami do samochodów w okolicach Kielc, Miedzianej Góry, Mniowa w miejscowości Przełom na trasie Kielce-Końskie.✅ Wysoka jakość usług i konkurencyjne ceny! ✅ Szukasz sprawdzonego mechanika samochodowego w okolicach Kielc, Miedzianej Góry, Mniowa? Sprawdź ✅ Polecany warsztat!">
+    <meta name="Keywords"
+        content="części samochodowe, auto, części, części do samochodu, części do auta, sklep z częściami, auto sklep, sprzedaż części samochodowych, auto części, sklep motoryzacyjny, Przełom, Mniów, Kielce, Miedziana Góra, Końskie, auto naprawa, naprawa samochodów, serwis samochodowy, warsztat samochodowy, mechanik, dobry mechanik, dobre opinie, tani warsztat">
+    <meta name="Description"
+        content="Naprawa samochodów i sklep motoryzacyjny z akcesoriami do samochodów w okolicach Kielc, Miedzianej Góry, Mniowa w miejscowości Przełom na trasie Kielce-Końskie.✅ Wysoka jakość usług i konkurencyjne ceny! ✅ Szukasz sprawdzonego mechanika samochodowego w okolicach Kielc, Miedzianej Góry, Mniowa? Sprawdź ✅ Zapała Bernard Handel Mechanika Samochodowa, wulkanizacja, klimatyzacja, diagnostyka ✅ Szukasz sprawdzonego mechanika samochodowego w okolicach Kielc, Miedzianej Góry, Mniowa? Sprawdź ✅ Polecany warsztat!">
     <meta name="Robots" content="index, follow">
     <script src="https://kit.fontawesome.com/227c86e519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -98,13 +100,13 @@
                     </div>
                     <p><span class="red">Auto Naprawa</span> <span class="yellow">U BERNARDA</span> jest firmą
                         działającą od 1998 roku. Zdobyte doświadczenie oraz wiedza pozwalają nam
-                        rozwijać i&nbsp;powiększać grono naszych klientów.</p>
+                        rozwijać się i&nbsp;powiększać grono naszych klientów.</p>
                     <p>Świadczymy usługi z zakresu <b>mechaniki pojazdowej</b>, <b>serwisu klimatyzacji</b>,
                         <b>wulkanizacji</b> i&nbsp;<b>diagnostyki</b>.
                     </p>
                     <p>Oferujemy szeroki asortyment części zamiennych i&nbsp;akcesoriów do wszystkich typów pojazdów
                         naprawianych
-                        w&nbsp;naszej firmie. W&nbsp;trosce o&nbsp;wygodę klientów przyjmujemy <b>płatności kartami
+                        w&nbsp;naszym warsztacie. W&nbsp;trosce o&nbsp;wygodę klientów przyjmujemy <b>płatności kartami
                             płatniczymi</b> i&nbsp;<b>kredytowymi</b>.</p>
                     Naszym celem jest uzyskanie jak największego grona zadowolonych Klientów naszego serwisu, poprzez
                     uczciwe i&nbsp;rzetelne wykonywanie powierzonych zadań.
@@ -258,18 +260,18 @@
                     HAMULCOWE&emsp;•&emsp;RÓŻNEGO RODZAJU FILTRY</div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:300px;">
-                <img src="./images/sklep4.jpg" alt="zdjęcie wnętrza sklepu">
+                <img src="./images/sklep5.jpg" alt="zdjęcie wnętrza sklepu">
                 <div class="card__head">PRZEWODY I USZCZELKI FILTRÓW&emsp;•&emsp;ŻARÓWKI
                     SAMOCHODOWE&emsp;•&emsp;SKROBACZKI DO SZYB</div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:400px;">
-                <img src="./images/sklep5.jpg" alt="zdjęcie wnętrza sklepu">
+                <img src="./images/sklep6.jpg" alt="zdjęcie wnętrza sklepu">
                 <div class="card__head">
                     KOMPRESORY&emsp;•&emsp;POMPKI&emsp;•&emsp;USZCZELKI&emsp;•&emsp;DYWANIKI&emsp;•&emsp;POKROWCE
                 </div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:500px;">
-                <img src="./images/sklep6.jpg" alt="zdjęcie wnętrza sklepu">
+                <img src="./images/sklep4.jpg" alt="zdjęcie wnętrza sklepu">
                 <div class="card__head">KONKURENCYJNE CENY&emsp;•&emsp;MOŻLIWOŚĆ PŁACENIA KARTAMI PŁATNICZYMI</div>
             </div>
         </div>
@@ -501,7 +503,7 @@
                         <span>
                             <i class="fas fa-mobile-alt"></i>
                         </span>
-                        <a href="tel: +48000000000">tel: +48 000 000 000</a>
+                        <a href="tel: +48000000000">tel: 504 358 687</a>
                     </div>
 
                     <div>
@@ -576,7 +578,7 @@
     <!-- End of Fooer -->
 
     </div>
-  
+
 </body>
 
 </html>
