--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="Robots" content="index, follow">
     <script src="https://kit.fontawesome.com/227c86e519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
     <script defer src="skrollr.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
