add responsive all sections

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="Description"
         content="Naprawa samochodów i sklep motoryzacyjny z akcesoriami do samochodów w okolicach Kielc, Miedzianej Góry, Mniowa w miejscowości Przełom na trasie Kielce-Końskie.✅ Wysoka jakość usług i konkurencyjne ceny! ✅ Szukasz sprawdzonego mechanika samochodowego w okolicach Kielc, Miedzianej Góry, Mniowa? Sprawdź ✅ Zapała Bernard Handel Mechanika Samochodowa, wulkanizacja, klimatyzacja, diagnostyka ✅ Szukasz sprawdzonego mechanika samochodowego w okolicach Kielc, Miedzianej Góry, Mniowa? Sprawdź ✅ Polecany warsztat!">
     <meta name="Robots" content="index, follow">
-    <script src="https://kit.fontawesome.com/227c86e519.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./fonts/stylesheet.css">
-    <script defer src="skrollr.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="./scripts/skrollr.js"></script>
+    <script defer src="./scripts/swiper-bundle.min.js"></script>
+    <script defer src="./scripts/all.min.js"></script>
+    <script defer src="./scripts/script.js"></script>
     <title>Auto — Naprawa U BERNARDA</title>
 </head>
 
@@ -39,7 +39,7 @@
 
         <div class="navbar__logo">
             <p>
-                <span>Auto - Naprawa</span><br> U Bernarda
+                <span>Auto &ndash; Naprawa</span> U Bernarda
             </p>
         </div>
         <div class="navbar__list">
@@ -92,7 +92,8 @@
         <section class="aboutUs" id="aboutUs">
             <h1 class="heading" data-center-center="opacity:1; top:0;" data-0-bottom="opacity:0; top:700px;">O NAS</h1>
             <div class="aboutUs__box">
-                <div class="aboutUs__paragraph" data-0-bottom="opacity:1" data-bottom-top="opacity:0;">
+                <div class="aboutUs__paragraph" data-100-bottom="opacity:1; left:0"
+                    data-bottom-top="opacity:0; left:-400px">
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -121,19 +122,20 @@
                 </div>
 
                 <div class="aboutUs__wrapper" data-0-bottom="opacity:1; right:0"
-                    data-bottom-top="opacity:0; right:-400px">
+                    data-bottom-top="opacity:0; right:-200px">
                     <div class="slides">
                         <div class="aboutUs__slide slide-1">
-                            <img src="./images/car1.jpg" alt="zdjęcie naszego warsztatu" />
+                            <img src="./images/warsztat1.jpg" alt="zdjęcie naszego warsztatu" />
                         </div>
                         <div class="aboutUs__slide slide-2">
-                            <img src="./images/car2.jpg" alt="zdjęcie naszego warsztatu" />
+                            <img src="./images/warsztat2.jpg" alt="zdjęcie naszego warsztatu" />
                         </div>
                         <div class="aboutUs__slide slide-3">
-                            <img src="./images/car3.jpg" alt="zdjęcie naszego warsztatu" />
+                            <img src="./images/warsztat3.jpg" alt="zdjęcie naszego warsztatu" />
                         </div>
                     </div>
                 </div>
+
 
             </div>
 
@@ -150,7 +152,7 @@
 
             <div class="offer">
                 <div class="contentBox contentBox-1" data-300-top="opacity:1; left:0;"
-                    data-bottom-top="opacity:0; left:-300px;">
+                    data-bottom-top="opacity:0; left:-200px;">
                     <div class="label">
                         <h3>MECHANIKA<h3>
                     </div>
@@ -185,7 +187,7 @@
                 </div>
 
                 <div class="contentBox contentBox-2" data-300-top="opacity:1; left:0;"
-                    data-bottom-top="opacity:0; left:-150px;"">
+                    data-bottom-top="opacity:0; left:-100px;"">
                     <div class=" label">
                     <h3>KLIMATYZACJA</h3>
                 </div>
@@ -209,7 +211,7 @@
             </div>
 
             <div class="contentBox contentBox-3" data-300-top="opacity:1; right:0;"
-                data-bottom-top="opacity:0; right:-150px;">
+                data-bottom-top="opacity:0; right:-100px;">
                 <div class="label">
                     <h3>WULKANIZACJA</h3>
                 </div>
@@ -224,7 +226,7 @@
             </div>
 
             <div class="contentBox contentBox-4" data-300-top="opacity:1; right:0;"
-                data-bottom-top="opacity:0; right:-300px;">
+                data-bottom-top="opacity:0; right:-200px;">
                 <div class="label">
                     <h3>DIAGNOSTYKA I INNE</h3>
                 </div>
@@ -251,28 +253,28 @@
         <div class="shopBox">
             <div class="card" data-center-top="top:0;" data-300-bottom="top:100px;">
                 <img src="./images/sklep1.jpg" alt="zdjęcie wnętrza sklepu">
-                <div class="card__head">WYCIERACZKI&emsp;•&emsp;OSŁONY NA
-                    SZYBY&emsp;•&emsp;KOŁPAKI&emsp;•&emsp;OLEJ&emsp;•&emsp;PŁYNY DO SPRYSKIWACZY i CHŁODNIC</div>
+                <div class="card__head">WYCIERACZKI&ensp;•&ensp;OSŁONY NA
+                    SZYBY&ensp;•&ensp;KOŁPAKI&ensp;•&ensp;OLEJ&ensp;•&ensp;PŁYNY DO SPRYSKIWACZY I CHŁODNIC</div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:200px;">
                 <img src="./images/sklep3.jpg" alt="zdjęcie wnętrza sklepu">
-                <div class="card__head">ŚRODKI DO MYCIA I CZYSZCZENIA&emsp;•&emsp;SMARY&emsp;•&emsp;PŁYNY
-                    HAMULCOWE&emsp;•&emsp;RÓŻNEGO RODZAJU FILTRY</div>
+                <div class="card__head">ŚRODKI DO MYCIA I CZYSZCZENIA&ensp;•&ensp;SMARY&ensp;•&ensp;PŁYNY
+                    HAMULCOWE&ensp;•&ensp;RÓŻNEGO RODZAJU FILTRY</div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:300px;">
                 <img src="./images/sklep5.jpg" alt="zdjęcie wnętrza sklepu">
-                <div class="card__head">PRZEWODY I USZCZELKI FILTRÓW&emsp;•&emsp;ŻARÓWKI
-                    SAMOCHODOWE&emsp;•&emsp;SKROBACZKI DO SZYB</div>
+                <div class="card__head">PRZEWODY I USZCZELKI FILTRÓW&ensp;•&ensp;ŻARÓWKI
+                    SAMOCHODOWE&ensp;•&ensp;SKROBACZKI DO SZYB</div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:400px;">
                 <img src="./images/sklep6.jpg" alt="zdjęcie wnętrza sklepu">
                 <div class="card__head">
-                    KOMPRESORY&emsp;•&emsp;POMPKI&emsp;•&emsp;USZCZELKI&emsp;•&emsp;DYWANIKI&emsp;•&emsp;POKROWCE
+                    KOMPRESORY&ensp;•&ensp;POMPKI&ensp;•&ensp;USZCZELKI&ensp;•&ensp;DYWANIKI&ensp;•&ensp;POKROWCE
                 </div>
             </div>
             <div class="card" data-center-top="top:0;" data-300-bottom="top:500px;">
                 <img src="./images/sklep4.jpg" alt="zdjęcie wnętrza sklepu">
-                <div class="card__head">KONKURENCYJNE CENY&emsp;•&emsp;MOŻLIWOŚĆ PŁACENIA KARTAMI PŁATNICZYMI</div>
+                <div class="card__head">KONKURENCYJNE CENY&ensp;•&ensp;MOŻLIWOŚĆ PŁACENIA KARTAMI PŁATNICZYMI</div>
             </div>
         </div>
 
@@ -490,7 +492,7 @@
                         <span>
                             <i class="fas fa-map-marker-alt"></i>
                         </span>
-                        <p>Auto-Naprawa U BERNARDA<br>Olszyna 5A<br>26-080 Przełom</p>
+                        <p>Auto &ndash; Naprawa U BERNARDA<br>Olszyna 5A<br>26-080 Przełom</p>
                     </div>
                     <div>
                         <span>
@@ -508,7 +510,7 @@
 
                     <div>
                         <span>
-                            <i class="fa fa-facebook"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
                         </span>
                         <a href="https://www.facebook.com/bernard.zapala" target="_blank">Kontakt przez
                             facebooka</a>
