add media queries landscape

--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@
                 <div class="aboutUs__wrapper">
                     <div class="slides">
                         <div class="aboutUs__slide slide-1">
-                            <img src="./images/warsztat1.webp" alt="zdjęcie naszego warsztatu" />
+                            <img src="./images/dron5.webp" alt="zdjęcie naszego warsztatu" />
                         </div>
                         <div class="aboutUs__slide slide-2">
-                            <img src="./images/warsztat2.webp" alt="zdjęcie naszego warsztatu" />
+                            <img src="./images/dron1.webp" alt="zdjęcie naszego warsztatu" />
                         </div>
                         <div class="aboutUs__slide slide-3">
+                            <img src="./images/warsztat2.webp" alt="zdjęcie naszego warsztatu" />
+                        </div>
+                        <div class="aboutUs__slide slide-4">
                             <img src="./images/warsztat3.webp" alt="zdjęcie naszego warsztatu" />
                         </div>
                     </div>
